chore: openapi security
